--- a/_config.yml
+++ b/_config.yml
@@ -93,8 +93,8 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: FatenElhariry
+    url: https://github.com/FatenElhariry
     desc: Fork me on GitHub
     share: false
 
